--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,6 +10,27 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
+    <%= f.input :first_name,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "first_name" }%>
+    <%= f.input :last_name,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "last_name" }%>
+    <%= f.input :university,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "university" }%>
+    <%= f.input :level_instruction,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "level_instruction" }%>
+    <%= f.input :phone,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "phone" }%>
+    <%= f.input :photo, as: :file %>
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
