avance del home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,32 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1541339907198-e08756dedf3f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);">
+  <div class="container">
+    <h1>Desarrollar tu tesis si es posible</h1>
+    <p>Te presentamos la mejor plataforma de acompañamiento</p>
+    <a href="#" class="btn-yours">Solicita una entrevista</a>
+  </div>
+</div>
+
+<div class="container my-5'">
+  <div class="row">
+    <div class="card col-4">
+      <%= image_tag "card-1.jpg"%>
+      <div class="card-body">
+        <h5 class="card-title">Recursos gratuitos</h5>
+        <p class="card-text">Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
+      </div>
+    </div>
+    <div class="card col-4">
+      <%= image_tag "card-2.jpg"%>
+      <div class="card-body">
+        <h5 class="card-title">Nuestros cursos</h5>
+        <p class="card-text">Conoce nuestra oferta adaptada a tus necesidades y circunstancias.</p>
+      </div>
+    </div>
+    <div class="card col-4">
+      <%= image_tag "card-3.jpg"%>
+      <div class="card-body">
+        <h5 class="card-title">Bi.thesis Premiun</h5>
+        <p class="card-text">Plan acompañamiento personalizado para desarrollar tu tesis.</p>
+    </div>
+  </div>
+</div>
