--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,3 +11,12 @@
   color: black;
   background: #ffdc5e;
 }
+
+.btn-registro {
+  display: block;
+  background: #ffdc5e;
+  width: 150px !important;
+  height: 40px;
+  border: none !important;
+  margin: 0 auto;
+}
