--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -14,6 +14,45 @@
   align-items: center;
   background-color: #FFFFFF;
 }
+.background-register{
+  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+  height: 45vh;
+  background-position: 100% 10%;
+  background-size: cover;
+}
+
+.container-register{
+  width: 60%;
+  margin: 0 auto;
+  margin-top: -300px;
+  h1{
+    font-weight: bold;
+    color: white;
+  }
+}
+
+.form-register {
+  background-color:#FCFBFF;
+  margin: 35px auto;
+  padding: 30px 50px;
+  h2 {
+    font-weight: bold;
+    font-size: 24px;
+  }
+  input{
+    width: 100%;
+    font-size: 14px !important;
+    color: black
+  }
+}
+
+.grid-form {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0px 40px;
+}
+
 
 .form-login {
   width: 55%;
