--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="container my-5'">
+
   <div class="row">
     <div class="card col-4">
       <%= image_tag "card-1.jpg"%>
@@ -29,4 +29,6 @@
         <p class="card-text">Plan acompañamiento personalizado para desarrollar tu tesis.</p>
     </div>
   </div>
-</div>
+
+
+<%= render 'shared/footer' %>
