navbar a medias con el avatar

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -6,7 +6,7 @@
 .login {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  height: 92vh;
+  height: 93vh;
 }
 .container-form {
   display: flex;
@@ -74,7 +74,7 @@ input {
   display: block;
   width: 150px;
   height: 40px;
-  background-color: #F9FD32;
+  background-color: #FFE67D;
   border: none !important;
   margin: 0 auto;
 }
