--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,8 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #957fef;
+  height: 7vh;
+  padding: 0 80px;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -14,9 +16,12 @@
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 24px;
-
+  margin-bottom: 0;
 }
 
 .text-white{
   color: white !important;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px !important;
+  font-weight: lighter !important;
 }
