--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -9,3 +9,20 @@
     font-family: 'Poppins', sans-serif;
   }
 }
+
+.container-entrevista {
+  padding: 100px;
+  h1 {
+    font-size: 48px;
+    font-weight: bold;
+    margin-bottom: 40px;
+  }
+
+  p{
+    margin-bottom: 30px;
+  }
+}
+
+.interview-info {
+  padding: 100px;
+}
