--- a/app/views/lines/_no_interview.html.erb
+++ b/app/views/lines/_no_interview.html.erb
@@ -1,5 +1,7 @@
-<h1>Programa tu entrevista</h1>
+<div class='container-entrevista'>
+  <h1>Programa tu entrevista</h1>
 
-<p>Aún no has programado tu entrevista, haz click al siguiente link y elige la fecha de la reunión.</p>
+  <p>Aún no has programado tu entrevista, haz click al siguiente link y elige la fecha de la reunión.</p>
 
-<%= link_to "Programar reunión", new_interview_path %>
+  <%= link_to "Programar reunión", new_interview_path, class: 'btn-yours' %>
+</div>
