--- a/app/views/lines/index.html.erb
+++ b/app/views/lines/index.html.erb
@@ -5,7 +5,10 @@
     <%= render 'dashboard' %>
   <% else %>
     <% if current_user.set_interview %>
-      Tu cita ha sido programada para <%= @date %>
+      <div class='interview-info'>
+       <h1>Reunión confirmada</h1>
+        Tu cita ha sido programada para el <%= @date %>
+      </div>
     <% else %>
       <%= render 'no_interview' %>
     <% end %>
