--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Source+Sans+Pro:wght@600&family=Ubuntu:wght@300&display=swap');
 .card {
   box-shadow: 2px 2px 3px rgb(124, 119, 119);
+  width: 240px;
+  height: 340px;
+  border: 0px;
   h5 {
     color: #957fef;
     font-family: 'Poppins', sans-serif;
@@ -8,4 +11,47 @@
   p {
     font-family: 'Poppins', sans-serif;
   }
+}
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+ }
+.card-text-2 h2 {
+  font-family: 'Poppins', sans-serif;
+  color: #6543ee;
+  font-size: 41px;
+  font-weight: bold;
+ }
+
+.card-text-2 p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 25px;
+}
+
+.card-text-2{
+  padding: 97px;
+  padding-top: 308px;
+}
+
+.card-home {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 50px;
+}
+
+.img-home {
+  width: 570px;
+  height: 380px;
+}
+
+.card-text-3 h5 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 41px;
+  font-weight: bold;
+  color: #6543ee;
+}
+
+.card-text-3 p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 25px;
 }
