--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,32 +1,65 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1541339907198-e08756dedf3f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://icdn.dtcn.com/image/digitaltrends_es/university-student-1872810_1280-1280x853.jpg);">
   <div class="container">
-    <h1>Desarrollar tu tesis si es posible</h1>
-    <p>Te presentamos la mejor plataforma de acompañamiento</p>
+    <h1>Bienvenido a Bi-Thesis</h1>
+    <br>
     <a href="#" class="btn-yours">Solicita una entrevista</a>
   </div>
 </div>
 
-<div class="container my-5'">
-  <div class="row">
-    <div class="card col-4">
-      <%= image_tag "card-1.jpg"%>
-      <div class="card-body">
-        <h5 class="card-title">Recursos gratuitos</h5>
-        <p class="card-text">Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
+<div class="container card-home align-items-center">
+  <div class="card-text-3">
+    <h5>Desarrollar tu tesis si es posible</h5>
+    <p>Te presentamos la mejor plataforma de acompañamiento</p>
+  </div>
+  <div>
+    <%= image_tag "graduacion_home.jpg", class:"img-home" %>
+  </div>
+</div>
+
+<div class="container my-5">
+  <div class="row ml-1">
+    <div class="col-4 p-5">
+      <div class="card m-2 p-0">
+        <%= image_tag "card-1.jpg"%>
+        <div class="card-body">
+          <h5 class="card-title">Recursos gratuitos</h5>
+          <p class="card-text">Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
+        </div>
       </div>
     </div>
-    <div class="card col-4">
-      <%= image_tag "card-2.jpg"%>
-      <div class="card-body">
-        <h5 class="card-title">Nuestros cursos</h5>
-        <p class="card-text">Conoce nuestra oferta adaptada a tus necesidades y circunstancias.</p>
+    <div class="col-4 p-5">
+      <div class="card m-2 p-0">
+        <%= image_tag "card-2.jpg"%>
+        <div class="card-body">
+          <h5 class="card-title">Nuestros cursos</h5>
+          <p class="card-text">Conoce nuestra oferta adaptada a tus necesidades y circunstancias.</p>
+        </div>
       </div>
     </div>
-    <div class="card col-4">
-      <%= image_tag "card-3.jpg"%>
-      <div class="card-body">
-        <h5 class="card-title">Bi.thesis Premiun</h5>
-        <p class="card-text">Plan acompañamiento personalizado para desarrollar tu tesis.</p>
+    <div class="col-4 p-5">
+      <div class="card m-2 p-0">
+        <%= image_tag "card-3.jpg"%>
+        <div class="card-body">
+          <h5 class="card-title">Bi-Thesis Premiun</h5>
+          <p class="card-text">Plan acompañamiento personalizado para desarrollar tu tesis.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="conteiner cards">
+  <div class="card-text-2 ">
+    <h2>Conoce a nuestro equipo</h2>
+    <p>Estamos encantados de ayudarte y acompañarte en el desarrollo de tu tesis, para que logres el tan anhelado grado académico para tu futuro.</p>
+  </div>
+  <div class="card-img row row-cols-2">
+    <div class="col d-flex align-items-center">
+      <%= image_tag "person_1.jpg" %>
+    </div>
+    <div class="col">
+      <%= image_tag "person_2.jpg" %>
+      <%= image_tag "person_3.jpg" %>
     </div>
   </div>
 </div>
