--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,8 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-   <h1>Bi thesis</h1>
-    <a class="navbar-brand" href="#">
+    <a class="d-flex" style="align-items: center; text-decoration: none" href="#">
+      <%= image_tag "logo.png", class: "navbar-brand"%>
+      <h1 style="margin-bottom: 0px">Bi-Thesis</h1>
     </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
