--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -55,7 +55,7 @@
 .card-text-3 p {
   font-family: 'Poppins', sans-serif;
   font-size: 25px;
-
+}
 .container-entrevista {
   padding: 100px;
   h1 {
@@ -64,7 +64,7 @@
     margin-bottom: 40px;
   }
 
-  p{
+  p {
     margin-bottom: 30px;
   }
 }
