--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,12 +2,12 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #957fef;
-  height: 7vh;
+  height: 60px;
   padding: 0 80px;
 }
 
 .navbar-brand {
-  width: 63px;
+  width: 40px;
 }
 
 .navbar-lewagon .navbar-collapse {
