--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <a class="d-flex" style="align-items: center; text-decoration: none" href="#">
+    <a class="d-flex" style="align-items: center; text-decoration: none" href="/">
       <%= image_tag "logo.png", class: "navbar-brand"%>
       <h1 style="margin-bottom: 0px">Bi-Thesis</h1>
     </a>
