--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -72,3 +72,51 @@
 .interview-info {
   padding: 100px;
 }
+
+.container-dashboard {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+}
+
+.main-dashboard {
+  flex-grow: 1;
+  padding: 25px 50px;
+  background-color: #FCFBFF;
+  .main-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    h1 {
+      color: #8240FF;
+      font-size: 36px;
+      font-weight: 500;
+      span{
+        color: black
+      }
+    }
+    .avatar-btn {
+      width: 130px;
+      height: 50px;
+      border: 1px solid #8240FF;
+      border-radius: 15px;
+      padding: 10px 25px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      i {
+        color: #8240FF;
+        font-size: 25px;
+      }
+      img {
+        width: 35px;
+        height: 35px;
+      }
+    }
+  }
+  .bar-space {
+    width: 100%;
+    height: 25px;
+    border-bottom: 1px solid #D7C3FF;
+  }
+}
