--- a/app/views/lines/index.html.erb
+++ b/app/views/lines/index.html.erb
@@ -5,10 +5,7 @@
     <%= render 'dashboard' %>
   <% else %>
     <% if current_user.set_interview %>
-      <div class='interview-info'>
-       <h1>Reunión confirmada</h1>
-        Tu cita ha sido programada para el <%= @date %>
-      </div>
+       <%= render 'interview_confirmed' %>
     <% else %>
       <%= render 'no_interview' %>
     <% end %>
