--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #957fef;
-  height: 7vh;
+  height: 60px;
   padding: 0 80px;
 }
 
