--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>Bienvenido a Bi-Thesis</h1>
     <br>
-    <a href="#" class="btn-yours">Solicita una entrevista</a>
+    <%= link_to 'Solicita una entrevista', new_user_registration_path, class: 'btn-yours' %>
   </div>
 </div>
 
