--- a/app/views/pages/recursos.html.erb
+++ b/app/views/pages/recursos.html.erb
@@ -1,16 +1,38 @@
-<div class="text">
-  <h1>Publicación más reciente</h1>
+<div class="container-recurso">
+  <br>
+  <h1 class="text-center">Publicación más reciente</h1>
+  <br>
+  <div class="card-recurso align-items-center">
+    <div>
+      <%= image_tag "text.jpg", class:"img-recurso" %>
+    </div>
+    <div class="card-text-recurso">
+      <div class="align-items-center">
+        <p>martes 13 May, 2022</p>
+        <p>Autor: mariamer henriquez</p>
+      </div>
+      <h5>Tu tesis como punto estratégico en tu proyecto de vida</h5>
+      <p class="text-justify">En el caso de que necesites desarrollar un trabajo de investigación para optar por un grado acadpemico, resulta estratégico para tu vida personal y profesional el dejar de verla como un mero requisito y convertirla más bien en la punta de lanza de tu plan de crecimiento.</p>
+      <a href="#" class="btn-yours">Más detalle</a>
+    </div>
+  </div>
 </div>
+<br>
+<div class="container-recurso-2">
+  <br>
+  <h1 class="text-center">Artículos de interés</h1>
+  <br>
+  <div class="cards-recurso align-items-center">
 
-<div class="container card-recurso align-items-center">
-  <div>
-    <%= image_tag "text.jpg", class:"img-recurso" %>
+    <div>
+    </div>
+    <div>
+    </div>
+    <div>
+    </div>
+
   </div>
-  <div class="card-text-recurso">
-    <p>martes 13 May, 2022</p>
-    <p>Autor: mariamer henriquez</p>
-    <h5>Tu tesis como punto estratégico en tu proyecto de vida</h5>
-    <p>En el caso de que necesites desarrollar un trabajo de investigación para optar por un grado acadpemico, resulta estratégico para tu vida personal y profesional el dejar de verla como un mero requisito y convertirla más bien en la punta de lanza de tu plan de crecimiento.</p>
+  <div class="card-recurso-2 align-items-center">
+
   </div>
-  <a href="#" class="btn-yours">Más detalle</a>
 </div>
