--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,19 +13,19 @@
   <div class=" col-sm-4 col-md col-sm-4  col-12 col">
     <h5 class="headin5_amrc col_white_amrc pt2">Bi.Thesis</h5>
     <ul class="footer_ul_amrc">
-      <li><a href="http://webenlance.com">Nuestro equipo</a></li>
-      <li><a href="http://webenlance.com">FAQ</a></li>
-      <li><a href="http://webenlance.com">Bitácora Solutions</a></li>
+      <li><a href='#'>Nuestro equipo</a></li>
+      <li><a href='#'>FAQ</a></li>
+      <li><a href='#'>Bitácora Solutions</a></li>
     </ul>
   </div>
 
   <div class=" col-sm-4 col-md col-sm-4  col-12 col">
     <h5 class="headin5_amrc col_white_amrc pt2">Nuestros servicios</h5>
     <ul class="footer_ul_amrc">
-      <li><a href="http://webenlance.com">Recursos gratuitos</a></li>
-      <li><a href="http://webenlance.com">Nuestros cursos</a></li>
-      <li><a href="http://webenlance.com">Bi.Thesis Premium</a></li>
-      <li><a href="http://webenlance.com">Generador de citas</a></li>
+      <li><%= link_to 'Recursos gratuitos', recursos_path %></li>
+      <li><a href='#'>Nuestros cursos</a></li>
+      <li><%= link_to 'Bi-Thesis Premium', new_user_registration_path %></li>
+      <li><a href='#'>Generador de citas</a></li>
     </ul>
   </div>
 
