--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
   <div class=" col-sm-4 col-md col-sm-4  col-12 col">
     <h5 class="headin5_amrc col_white_amrc pt2">Bi.Thesis</h5>
     <ul class="footer_ul_amrc">
-      <li><a href='#'>Nuestro equipo</a></li>
+      <li><a href='#/conocenos'>Nuestro equipo</a></li>
       <li><a href='#'>FAQ</a></li>
       <li><a href='#'>Bitácora Solutions</a></li>
     </ul>
@@ -45,11 +45,11 @@
   <div class="container">
   <br>
   <div class="row">
-  <div class="col-5">
+  <div class="col-4">
     <p>© Copyright 2022 Bitácora Solutions LLC</p>
   </div>
 
-  <div class="col-7">
+  <div class="col-8">
   <div class="copyright-menu">
     <ul>
       <li><p>Aviso Legal</p></li>
