--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -58,13 +58,13 @@
                         <% if i.zero? %>
                           <div class="tab-pane fade show active" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">
                             <h4>
-                            Contenido de la estación
+                            <%= station.content %>
                             </h4>
                           </div>
                         <% else %>
                           <div class="tab-pane fade" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">
                             <h4>
-                            Contenido de la estación
+                            <%= station.content %>
                             </h4>
                           </div>
                         <% end %>
@@ -91,9 +91,9 @@
                   <div class="tab-content" id="nav-tabContent">
                     <% line.stations.each_with_index do |station,i| %>
                         <% if i.zero? %>
-                          <div class="tab-pane fade show active" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">...</div>
+                          <div class="tab-pane fade show active" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab"><h4><%= station.content %></h4></div>
                         <% else %>
-                          <div class="tab-pane fade" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">...</div>
+                          <div class="tab-pane fade" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab"><h4><%= station.content %></h4></div>
                         <% end %>
                     <% end %>
                   </div>
