--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -12,9 +12,9 @@
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
           <% @lines.each_with_index do |line, i| %>
             <% if i.zero? %>
-              <a class="nav-link active" id="v-pills-<%= line.abrv %>-tab" data-toggle="pill" href="#v-pills-<%= line.abrv %>" role="tab" aria-controls="v-pills-<%= line.abrv %>" aria-selected="true"><i class="<%= line.icon_tag %>"></i></a>
+              <a class="nav-link active text-center mb-3" id="v-pills-<%= line.abrv %>-tab" data-toggle="pill" href="#v-pills-<%= line.abrv %>" role="tab" aria-controls="v-pills-<%= line.abrv %>" aria-selected="true"><i class="<%= line.icon_tag %>"></i></a>
             <% else %>
-              <a class="nav-link" id="v-pills-<%= line.abrv %>-tab" data-toggle="pill" href="#v-pills-<%= line.abrv %>" role="tab" aria-controls="v-pills-<%= line.abrv %>" aria-selected="false"><i class="<%= line.icon_tag %>"></i></a>
+              <a class="nav-link text-center mb-3" id="v-pills-<%= line.abrv %>-tab" data-toggle="pill" href="#v-pills-<%= line.abrv %>" role="tab" aria-controls="v-pills-<%= line.abrv %>" aria-selected="false"><i class="<%= line.icon_tag %>"></i></a>
             <% end %>
           <% end %>
         </div>
@@ -57,15 +57,17 @@
                     <% line.stations.each_with_index do |station,i| %>
                         <% if i.zero? %>
                           <div class="tab-pane fade show active" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">
-                            <h4>
+                            <h4 class='mt-3'>
                             Contenido de la estación
                             </h4>
                           </div>
                         <% else %>
                           <div class="tab-pane fade" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">
-                            <h4>
-                            Contenido de la estación
-                            </h4>
+                            <div class='content-dash'>
+                              <h4 class='mt-3'>
+                              Contenido de la estación
+                              </h4>
+                            </div>
                           </div>
                         <% end %>
                     <% end %>
@@ -91,9 +93,17 @@
                   <div class="tab-content" id="nav-tabContent">
                     <% line.stations.each_with_index do |station,i| %>
                         <% if i.zero? %>
-                          <div class="tab-pane fade show active" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">...</div>
+                          <div class="tab-pane fade show active" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">
+                            <h4 class='mt-3'>
+                            Contenido de la estación
+                            </h4>
+                          </div>
                         <% else %>
-                          <div class="tab-pane fade" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">...</div>
+                          <div class="tab-pane fade" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">
+                            <h4 class='mt-3'>
+                            Contenido de la estación
+                            </h4>
+                          </div>
                         <% end %>
                     <% end %>
                   </div>
