--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -2,4 +2,7 @@
   background-color: white !important;
   width: 100%;
   border: 1px solid #8240FF;
+  padding: 25px 25px;
+  border-radius: 5px;
+  height: 70vh;
 }
