--- a/app/views/pages/recursos.html.erb
+++ b/app/views/pages/recursos.html.erb
@@ -8,8 +8,8 @@
     </div>
     <div class="card-text-recurso">
       <div class="align-items-center">
-        <p>martes 13 May, 2022</p>
-        <p>Autor: mariamer henriquez</p>
+        <p>martes 13 de Mayo, 2022</p>
+        <p>Autor: Mariamer Henriquez</p>
       </div>
       <h5>Tu tesis como punto estratégico en tu proyecto de vida</h5>
       <p class="text-justify">En el caso de que necesites desarrollar un trabajo de investigación para optar por un grado acadpemico, resulta estratégico para tu vida personal y profesional el dejar de verla como un mero requisito y convertirla más bien en la punta de lanza de tu plan de crecimiento.</p>
