--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -5,4 +5,10 @@
   padding: 25px 25px;
   border-radius: 5px;
   height: 70vh;
+  overflow: auto;
+}
+
+.container-video {
+  width: 60%;
+  margin: 30px auto;
 }
