articulo con normas aplicadas

--- a/app/assets/stylesheets/components/_articulo1.scss
+++ b/app/assets/stylesheets/components/_articulo1.scss
@@ -2,6 +2,13 @@
     font-size: 25px;
 }
 
+.container h1 {
+    color: #957fef;
+}
+
+.container h2 {
+    color: #629D64;
+}
 
 .img-articulo1 {
     width: 1029px;
