--- a/app/views/pages/recursos.html.erb
+++ b/app/views/pages/recursos.html.erb
@@ -1,38 +1,84 @@
-<div class="container-recurso">
-  <br>
-  <h1 class="text-center">Publicación más reciente</h1>
-  <br>
-  <div class="card-recurso align-items-center">
-    <div>
-      <%= image_tag "text.jpg", class:"img-recurso" %>
-    </div>
-    <div class="card-text-recurso">
-      <div class="align-items-center">
-        <p>martes 13 May, 2022</p>
-        <p>Autor: mariamer henriquez</p>
+<div class="container">
+  <div class="container-recurso">
+    <br>
+    <h1 class="text-center">Publicación más reciente</h1>
+    <br>
+    <div class="card-recurso align-items-center">
+      <div>
+        <%= image_tag "text.jpg", class:"img-recurso" %>
       </div>
-      <h5>Tu tesis como punto estratégico en tu proyecto de vida</h5>
-      <p class="text-justify">En el caso de que necesites desarrollar un trabajo de investigación para optar por un grado acadpemico, resulta estratégico para tu vida personal y profesional el dejar de verla como un mero requisito y convertirla más bien en la punta de lanza de tu plan de crecimiento.</p>
-      <a href="#" class="btn-yours">Más detalle</a>
+      <div class="card-text-recurso">
+        <div class="d-flex  justify-content-between">
+          <p>Martes 13 May, 2022</p>
+          <p>Autor: Mariamer henriquez</p>
+        </div>
+        <h5>Tu tesis como punto estratégico en tu proyecto de vida</h5>
+        <p class="text-justify">En el caso de que necesites desarrollar un trabajo de investigación para optar por un grado acadpemico, resulta estratégico para tu vida personal y profesional el dejar de verla como un mero requisito y convertirla más bien en la punta de lanza de tu plan de crecimiento.</p>
+        <a href="#" class="btn-yours">Más detalle</a>
+      </div>
     </div>
   </div>
-</div>
-<br>
-<div class="container-recurso-2">
   <br>
-  <h1 class="text-center">Artículos de interés</h1>
   <br>
-  <div class="cards-recurso align-items-center">
-
-    <div>
+  <div class="container">
+    <div class="container-recurso-2">
+      <h1 class="text-center">Artículos de interés</h1>
+      <div class="recursos-grid">
+        <div class="recursos-card">
+          <div class="recursos-card-content">
+          <h6><strong>IDEA DE INVESTIGACIÓN</strong></h6>
+          <h5>¿Por dónde empezar?</h5>
+          <p>¿Te sientes abrumado por el proyecto de investigación? No te preocupes aquí te enseñamos los primeros pasos.</p>
+          <p><strong>Autor:</strong> Mariamer Henriquez</p>
+          <p><strong>Jueves 13 May, 2018</strong></p>
+          </div>
+        </div>
+        <div class="recursos-card">
+          <div class="recursos-card-content">
+            <h6><strong>IDEA DE INVESTIGACIÓN</strong></h6>
+            <h5>¿Dónde buscar?</h5>
+            <p>Una vez tenemos claro el tema de investigación, es importante encontrar la fundamentación teórica necesaria para tu proyecto.</p>
+            <p><strong>Autor:</strong> Mariamer Henriquez</p>
+            <p><strong>Lunes 30 Octubre, 2018</strong></p>
+          </div>
+        </div>
+        <div class="recursos-card">
+          <div class="recursos-card-content">
+            <h6><strong>¿SE PUEDE?</strong></h6>
+            <h5>¿Por dónde empezar?</h5>
+            <p>Probablemente tenemos el proyecto ideal, pero, ¿se puede?, aquí te enseñamos los facotres a considerar para no morir en el intento.</p>
+            <p><strong>Autor:</strong> Mariamer Henriquez</p>
+            <p><strong>Sábado 3 Septiembre, 2019</strong></p>
+          </div>
+        </div>
+        <div class="recursos-card">
+          <div class="recursos-card-content">
+            <h6><strong>ORIGINALIDAD</strong></h6>
+            <h5>¿Plagio?</h5>
+            <p>Todo lo que debes saber para evitarlo.</p>
+            <p><strong>Autor:</strong> Mariamer Henriquez</p>
+            <p><strong>Domingo 19 Septiembre, 2020</strong></p>
+          </div>
+        </div>
+        <div class="recursos-card">
+          <div class="recursos-card-content">
+            <h6><strong>DESARROLLO DEL PROYECTO</strong></h6>
+            <h5>La asesoría de la investigación</h5>
+            <p>Todo lo que debes tener en cuenta para organizar y aprovechar al máxima las entrevistas con tu asesor.</p>
+            <p><strong>Autor:</strong> Mariamer Henriquez</p>
+            <p><strong>Lunes 02 Septiembre, 2019</strong></p>
+          </div>
+        </div>
+        <div class="recursos-card">
+          <div class="recursos-card-content">
+            <h6><strong>DESARROLLO DEL PROYECTO</strong></h6>
+            <h5>Organización</h5>
+            <p>Resumimos aquí los que debes considerar para organizar tu tiempo en el desarrollo de la tesis y avanzar acorde a lo planificado.</p>
+            <p><strong>Autor:</strong> Mariamer Henriquez</p>
+            <p><strong>Martes 13 Mayo, 2018</strong></p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div>
-    </div>
-    <div>
-    </div>
-
-  </div>
-  <div class="card-recurso-2 align-items-center">
-
   </div>
 </div>
