--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,36 +1,38 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <a class="d-flex" style="align-items: center; text-decoration: none" href="/">
-      <%= image_tag "logo.png", class: "navbar-brand"%>
-      <h1 style="margin-bottom: 0px">Bi-Thesis</h1>
-    </a>
+  <div class="container">
+    <div class="container-fluid">
+      <a class="d-flex" style="align-items: center; text-decoration: none" href="/">
+        <%= image_tag "logo.png", class: "navbar-brand"%>
+        <h1 style="margin-bottom: 0px">Bi-Thesis</h1>
+      </a>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item dropdown">
-            <% if current_user.photo.key %>
-              <%= cl_image_tag current_user.photo.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <% else %>
-              <%= image_tag 'avatar-default.jpg', class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <% end %>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Mi perfil", "#", class: "dropdown-item" %>
-              <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#">Conócenos</a>
-          </li>
-          <span style='font-size:23px; color:white'>|</span>
-          <li class="nav-item">
-            <%= link_to "Iniciar sesión", new_user_session_path, class: "nav-link text-white" %>
-          </li>
-          <%= link_to 'Solicita una entrevista', new_user_registration_path, class: 'btn-yours' %>
-        <% end %>
-      </ul>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto">
+          <% if user_signed_in? %>
+            <li class="nav-item dropdown">
+              <% if current_user.photo.key %>
+                <%= cl_image_tag current_user.photo.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+              <% else %>
+                <%= image_tag 'avatar-default.jpg', class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+              <% end %>
+              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <%= link_to "Mi perfil", "#", class: "dropdown-item" %>
+                <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+              </div>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#conocenos">Conócenos</a>
+            </li>
+            <span style='font-size:23px; color:white'>|</span>
+            <li class="nav-item">
+              <%= link_to "Iniciar sesión", new_user_session_path, class: "nav-link text-white" %>
+            </li>
+            <%= link_to 'Solicita una entrevista', new_user_registration_path, class: 'btn-yours' %>
+          <% end %>
+        </ul>
+      </div>
+
     </div>
-
   </div>
 </div>
